assets/css/adds.css
#header.alt .logo img{
    max-width: 256px;
    max-height: 256px;
}

.pdf-viewer{
    min-height: 600px;
}

@media screen and (max-width: 1000px){
    .pdf-viewer{
        display: none;
    }
}

@media screen and (min-width: 1000px){
    .pdf-viewer__alt{
        display: none;
    }
}

.text__bold{
    font-weight: 600;
}

.orgs-img{
    width: 13em;
    height: 13em;
}

.where-wrap{
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
}

@media screen and (max-width: 900px) {
    .where-wrap{
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -webkit-flex-direction: column;
        -ms-flex-direction: column;
        flex-direction: column;
    }
}

.where-map{
    width: 100%;
}

.where-text{
    margin-right: 10px;
    text-align: left;
}

.where-text ul{
    list-style: none;
}

.about-wrap{
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    text-align: left;
}

.about-wrap ul{
    list-style: none;
}

.about-wrap div{
    min-width: 50%;
}


.about-wrap__right{
    padding-left: 10px;
}

.partners{
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

.partners li{
    margin: 10px 0;
    list-style: none;
    width: 50%;
    padding: 0;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    .partners li{
        display: block;
    }
}

@media screen and (min-width: 900px) {
    .partners li{
        width: 25%;
    }
}

.partners img{
    max-width: 100%;
}

.tasks-list ul{
    list-style: none;
}

.tasks-list li{
    width: 100%;
    text-align: left;
}


.nice-h3:after{
    display: block;
    content: '';
    width: 50%;
    height: 2px;
    margin: 0 auto;
    border-radius: 2px;
    background-color: #dddddd;
    background-image: -moz-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
    background-image: -webkit-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
    background-image: -ms-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
    background-image: linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
}

.li-width___full{
    width: 100% !important;
}

.li-width__75{
    width: 75% !important;
}

.faq{

}

.faq .nice-h3{
    font-weight: 500;
    text-align: left;
}

.faq .nice-h3:after{
    margin: 0;
    width: 100%;
}

.faq .tasks-list ul{
    padding-left: 0;
}

.faq .tasks-list li{
    margin-left: 0;
}

.partners-page h2{
    font-weight: 500;
}

@media screen and (min-width: 900px) {
    .faq-mobile-link{
        display: none;
    }
}

.experts{
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    justify-content: space-between;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}
@media screen and (max-width: 900px) {
    .experts{
        justify-content: center;
    }
}

.experts li{
    list-style: none;
}

.experts img{
    max-width: 200px;
    max-height: 200px;
    border-radius: 50%;
    pointer-events: none;
}

.expert-photo{
    margin: 0 auto;
    width: 200px;
    height: 200px;
    border-radius: 50%;
    pointer-events: none;

    background-repeat: no-repeat !important;
    background-position: center !important;
    background-size: contain !important;
}

.experts h4, .experts p{
    margin: 0;
}

/* Info section */
.info{
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

.info li{
    margin: 10px 0;
    list-style: none;
    width: 50%;
    padding: 0;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    .info li{
        display: block;
    }
}

@media screen and (min-width: 900px) {
    .info li{
        width: 20%;
    }
}

.info img{
    max-width: 100%;
}

/*Map*/
.map-time li{
    list-style: none;
}

.map-img img{
    max-width: 100%;
}

